fixed footer sign text align

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -45,6 +45,7 @@
 
 .footer__sign {
     font-size: 1.5rem;
+    text-align: center;
 }
 
 @media (max-width: 1536px) {
